fix: Database level relantionship between associations
